force-app/main/default/objects/sugati__RA_Rate__c/sugati__RA_Rate__c.object-meta.xml
<CustomObject>
    <description>Rates for various services</description>
    <label>Rate</label>
    <nameField>
        <displayFormat>RA-{0000000000}</displayFormat>
        <label>Rate ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>