force-app/main/default/objects/sugati__RA_Rate__c/fields/sugati__Archived__c.field-meta.xml
<CustomField>
    <fullName>sugati__Archived__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Archived records won&apos;t be visible in rate loading.</inlineHelpText>
    <label>Archived</label>
    <type>Checkbox</type>
</CustomField>