force-app/main/default/objects/sugati__RA_Rate__c/fields/sugati__RA_Activity__c.field-meta.xml
<CustomField>
    <fullName>sugati__RA_Activity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Activity</label>
    <referenceTo>sugati__Activity__c</referenceTo>
    <relationshipName>Room_Service_Rates</relationshipName>
    <type>Lookup</type>
</CustomField>