force-app/main/default/objects/sugati__RA_Rate__c/fields/sugati__RA_Age_To__c.field-meta.xml
<CustomField>
    <fullName>sugati__RA_Age_To__c</fullName>
    <label>Age To</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>