force-app/main/default/objects/sugati__RA_Rate__c/fields/sugati__RA_Arranged_By__c.field-meta.xml
<CustomField>
    <fullName>sugati__RA_Arranged_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Arranged By</label>
    <referenceTo>sugati__Supplier__c</referenceTo>
    <relationshipName>Room_Service_Rates</relationshipName>
    <type>Lookup</type>
</CustomField>