force-app/main/default/objects/sugati__RA_Rate__c/fields/sugati__RA_Category__c.field-meta.xml
<CustomField>
    <fullName>sugati__RA_Category__c</fullName>
    <description>Price/Season Category. This is an optional field.</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>