force-app/main/default/objects/sugati__RA_Rate__c/fields/sugati__RA_Charging_Option__c.field-meta.xml
<CustomField>
    <fullName>sugati__RA_Charging_Option__c</fullName>
    <label>Charging Option</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Per Person</fullName>
            </value>
            <value>
                <fullName>Per Booking</fullName>
            </value>
            <value>
                <fullName>Per Day</fullName>
                <isActive>false</isActive>
                <label>Per Day</label>
            </value>
            <value>
                <fullName>Per Hour</fullName>
                <isActive>false</isActive>
                <label>Per Hour</label>
            </value>
            <value>
                <fullName>Per Week</fullName>
                <isActive>false</isActive>
                <label>Per Week</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>