force-app/main/default/objects/sugati__RA_Rate__c/fields/sugati__RA_Contract__c.field-meta.xml
<CustomField>
    <fullName>sugati__RA_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is optional as some TOs will use Contract and some will not use it at all.</description>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipName>Rates</relationshipName>
    <type>Lookup</type>
</CustomField>