force-app/main/default/objects/sugati__RA_Rate__c/fields/sugati__RA_Contract_Status__c.field-meta.xml
<CustomField>
    <fullName>sugati__RA_Contract_Status__c</fullName>
    <description>If Contract is used, these values will be populated.</description>
    <label>Contract Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Guaranteed</fullName>
            </value>
            <value>
                <fullName>Specific Week Guaranteed</fullName>
            </value>
            <value>
                <fullName>On Request</fullName>
            </value>
            <value>
                <fullName>Blocked Off</fullName>
            </value>
            <value>
                <fullName>Released</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>