force-app/main/default/objects/sugati__RA_Rate__c/fields/sugati__RA_Costing_Currency__c.field-meta.xml
<CustomField>
    <fullName>sugati__RA_Costing_Currency__c</fullName>
    <description>Typically comes from Contract.</description>
    <inlineHelpText>Costing Currency committed to the supplier</inlineHelpText>
    <label>Costing Currency</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>USD</fullName>
            </value>
            <value>
                <fullName>GBP</fullName>
            </value>
            <value>
                <fullName>EUR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>