force-app/main/default/objects/sugati__RA_Rate__c/fields/sugati__RA_Day_of_Week__c.field-meta.xml
<CustomField>
    <fullName>sugati__RA_Day_of_Week__c</fullName>
    <label>Day of Week</label>
    <length>10</length>
    <type>Text</type>
</CustomField>