force-app/main/default/objects/sugati__RA_Rate__c/fields/sugati__RA_Discount__c.field-meta.xml
<CustomField>
    <fullName>sugati__RA_Discount__c</fullName>
    <formula>IF( sugati__RA_Special_Offer_Discount__c = TRUE,  sugati__RA_Original_Sell__c -  sugati__RA_Live_Sell__c , sugati__RA_Live_Sell__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>