force-app/main/default/objects/sugati__RA_Rate__c/fields/sugati__RA_Duration_From__c.field-meta.xml
<CustomField>
    <fullName>sugati__RA_Duration_From__c</fullName>
    <label>Duration From</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>