force-app/main/default/objects/sugati__RA_Rate__c/fields/sugati__RA_From_Airport_Station__c.field-meta.xml
<CustomField>
    <fullName>sugati__RA_From_Airport_Station__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>From Airport &amp; Station</label>
    <referenceTo>sugati__Airport__c</referenceTo>
    <relationshipName>Room_Service_Rates</relationshipName>
    <type>Lookup</type>
</CustomField>