force-app/main/default/objects/sugati__RA_Rate__c/fields/sugati__RA_From_Date__c.field-meta.xml
<CustomField>
    <fullName>sugati__RA_From_Date__c</fullName>
    <label>From Date</label>
    <type>Date</type>
</CustomField>