force-app/main/default/objects/sugati__RA_Rate__c/fields/sugati__RA_Internal_Note__c.field-meta.xml
<CustomField>
    <fullName>sugati__RA_Internal_Note__c</fullName>
    <label>Internal Note</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>