force-app/main/default/objects/sugati__RA_Rate__c/fields/sugati__RA_Invoice_Text__c.field-meta.xml
<CustomField>
    <fullName>sugati__RA_Invoice_Text__c</fullName>
    <label>Invoice Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>