force-app/main/default/objects/sugati__RA_Rate__c/fields/sugati__RA_Is_Daily_Rate__c.field-meta.xml
<CustomField>
    <fullName>sugati__RA_Is_Daily_Rate__c</fullName>
    <formula>sugati__RA_From_Date__c ==  sugati__RA_To_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Daily Rate</label>
    <type>Checkbox</type>
</CustomField>