force-app/main/default/objects/sugati__RA_Rate__c/fields/sugati__RA_Leg__c.field-meta.xml
<CustomField>
    <fullName>sugati__RA_Leg__c</fullName>
    <description>Only for Flight Rate</description>
    <label>Leg</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Return</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>