force-app/main/default/objects/sugati__RA_Rate__c/fields/sugati__RA_Live_Cost__c.field-meta.xml
<CustomField>
    <fullName>sugati__RA_Live_Cost__c</fullName>
    <label>Live Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>