force-app/main/default/objects/sugati__RA_Rate__c/fields/sugati__RA_Live_Sell__c.field-meta.xml
<CustomField>
    <fullName>sugati__RA_Live_Sell__c</fullName>
    <inlineHelpText>This is a Live Selling Price and must be used in the calculation.</inlineHelpText>
    <label>Live Sell</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>