force-app/main/default/objects/sugati__RA_Rate__c/fields/sugati__RA_Local_Currency__c.field-meta.xml
<CustomField>
    <fullName>sugati__RA_Local_Currency__c</fullName>
    <inlineHelpText>Local currency which you wants to use for the rates.</inlineHelpText>
    <label>Local Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EUR</fullName>
            </value>
            <value>
                <fullName>GBP</fullName>
            </value>
            <value>
                <fullName>KES</fullName>
            </value>
            <value>
                <fullName>USD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>