force-app/main/default/objects/sugati__RA_Rate__c/fields/sugati__RA_Margin__c.field-meta.xml
<CustomField>
    <fullName>sugati__RA_Margin__c</fullName>
    <label>Margin</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>