force-app/main/default/objects/sugati__RA_Rate__c/fields/sugati__RA_Note_Client__c.field-meta.xml
<CustomField>
    <fullName>sugati__RA_Note_Client__c</fullName>
    <label>Note (Client)</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>