force-app/main/default/objects/sugati__RA_Rate__c/fields/sugati__RA_Occupancy_To__c.field-meta.xml
<CustomField>
    <fullName>sugati__RA_Occupancy_To__c</fullName>
    <label>Pax To</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>