force-app/main/default/objects/sugati__RA_Rate__c/fields/sugati__RA_Occupancy_Type__c.field-meta.xml
<CustomField>
    <fullName>sugati__RA_Occupancy_Type__c</fullName>
    <label>Occupancy Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adult</fullName>
                <default>true</default>
                <label>Adult</label>
            </value>
            <value>
                <fullName>Child</fullName>
            </value>
            <value>
                <fullName>Infant</fullName>
            </value>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Double/Twin</fullName>
            </value>
            <value>
                <fullName>Extra Adult</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>