force-app/main/default/objects/sugati__RA_Rate__c/fields/sugati__RA_Per_Adult_Sharing_Local__c.field-meta.xml
<CustomField>
    <fullName>sugati__RA_Per_Adult_Sharing_Local__c</fullName>
    <inlineHelpText>Per adult sharing price in the local currency.</inlineHelpText>
    <label>Per Adult Sharing (Local)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>