force-app/main/default/objects/sugati__RA_Rate__c/fields/sugati__RA_Per_Child_Sharing__c.field-meta.xml
<CustomField>
    <fullName>sugati__RA_Per_Child_Sharing__c</fullName>
    <label>Per Child Occupancy</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>