force-app/main/default/objects/sugati__RA_Rate__c/fields/sugati__RA_Room__c.field-meta.xml
<CustomField>
    <fullName>sugati__RA_Room__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is optional as some TOs will use Contract and not Rooms.</description>
    <label>Room</label>
    <referenceTo>sugati__Room__c</referenceTo>
    <relationshipName>Rates</relationshipName>
    <type>Lookup</type>
</CustomField>