force-app/main/default/objects/sugati__RA_Rate__c/fields/sugati__RA_Room_No__c.field-meta.xml
<CustomField>
    <fullName>sugati__RA_Room_No__c</fullName>
    <formula>IF(
    ISBLANK(sugati__RA_Room__r.sugati__R_Room_No__c),
    sugati__RA_Room__r.sugati__S_R_Room_Name__c,
    TEXT(sugati__RA_Room__r.sugati__R_Room_No__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Room No</label>
    <type>Text</type>
</CustomField>