force-app/main/default/objects/sugati__RA_Rate__c/fields/sugati__RA_Room_Type__c.field-meta.xml
<CustomField>
    <fullName>sugati__RA_Room_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Room Type</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The room type supplier must be the same as the rate supplier.</errorMessage>
        <filterItems>
            <field>sugati__Room_Type__c.sugati__RT_Supplier__c</field>
            <operation>equals</operation>
            <valueField>$Source.sugati__RA_Supplier__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>sugati__Room_Type__c</referenceTo>
    <relationshipLabel>Rates</relationshipLabel>
    <relationshipName>Room_Service_Rates</relationshipName>
    <type>Lookup</type>
</CustomField>