force-app/main/default/objects/sugati__RA_Rate__c/fields/sugati__RA_Room_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>sugati__RA_Room_Type_Name__c</fullName>
    <formula>sugati__RA_Room_Type__r.sugati__RT_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Room Type Name</label>
    <type>Text</type>
</CustomField>