force-app/main/default/objects/sugati__RA_Rate__c/fields/sugati__RA_Service_Location__c.field-meta.xml
<CustomField>
    <fullName>sugati__RA_Service_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Location</label>
    <referenceTo>sugati__Where_to_go__c</referenceTo>
    <relationshipLabel>Rates</relationshipLabel>
    <relationshipName>Rates</relationshipName>
    <type>Lookup</type>
</CustomField>