force-app/main/default/objects/sugati__RA_Rate__c/fields/sugati__RA_Service_Name__c.field-meta.xml
<CustomField>
    <fullName>sugati__RA_Service_Name__c</fullName>
    <label>Service Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>