force-app/main/default/objects/sugati__RA_Rate__c/fields/sugati__RA_Service_Type__c.field-meta.xml
<CustomField>
    <fullName>sugati__RA_Service_Type__c</fullName>
    <label>Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Booking On A Tour</fullName>
            </value>
            <value>
                <fullName>Excursion at City</fullName>
            </value>
            <value>
                <fullName>Excursion at National Park</fullName>
            </value>
            <value>
                <fullName>Excursion at Private Island</fullName>
            </value>
            <value>
                <fullName>Transfer from Heathrow Airport to ABC Hotel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>