force-app/main/default/objects/sugati__RA_Rate__c/fields/sugati__RA_Show_on_Invoice__c.field-meta.xml
<CustomField>
    <fullName>sugati__RA_Show_on_Invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show on Invoice</label>
    <type>Checkbox</type>
</CustomField>