force-app/main/default/objects/sugati__RA_Rate__c/fields/sugati__RA_Single_Occupany_Rate__c.field-meta.xml
<CustomField>
    <fullName>sugati__RA_Single_Occupany_Rate__c</fullName>
    <label>Single Occupany Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>