force-app/main/default/objects/sugati__RA_Rate__c/fields/sugati__RA_Special_Offer_Discount__c.field-meta.xml
<CustomField>
    <fullName>sugati__RA_Special_Offer_Discount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Special Offer / Discount ?</label>
    <type>Checkbox</type>
</CustomField>