force-app/main/default/objects/sugati__RA_Rate__c/fields/sugati__RA_Status__c.field-meta.xml
<CustomField>
    <fullName>sugati__RA_Status__c</fullName>
    <description>These values are tied into the booking process but can add in new values. Wouldn&apos;t recommend to take the values out.</description>
    <inlineHelpText>Booking Status</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Available</fullName>
                <default>true</default>
                <label>Available</label>
            </value>
            <value>
                <fullName>Booked</fullName>
            </value>
            <value>
                <fullName>Hold</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Provisionally Booked</fullName>
            </value>
            <value>
                <fullName>Released</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>