force-app/main/default/objects/sugati__RA_Rate__c/fields/sugati__RA_Supplier__c.field-meta.xml
<CustomField>
    <fullName>sugati__RA_Supplier__c</fullName>
    <label>Supplier</label>
    <referenceTo>sugati__Supplier__c</referenceTo>
    <relationshipLabel>Rates (Supplier)</relationshipLabel>
    <relationshipName>Rates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>