force-app/main/default/objects/sugati__RA_Rate__c/fields/sugati__RA_Tax__c.field-meta.xml
<CustomField>
    <fullName>sugati__RA_Tax__c</fullName>
    <description>This could be additional fees and tax that should go on top of selling price.</description>
    <inlineHelpText>Government fees and taxes (additional)</inlineHelpText>
    <label>Tax</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>