force-app/main/default/objects/sugati__RA_Rate__c/fields/sugati__RA_To_Airport_Station__c.field-meta.xml
<CustomField>
    <fullName>sugati__RA_To_Airport_Station__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>To Airport &amp; Station</label>
    <referenceTo>sugati__Airport__c</referenceTo>
    <relationshipLabel>Rates (To Airport &amp; Station)</relationshipLabel>
    <relationshipName>Rates</relationshipName>
    <type>Lookup</type>
</CustomField>