force-app/main/default/objects/sugati__RA_Rate__c/fields/sugati__RA_Total_Waiting_List__c.field-meta.xml
<CustomField>
    <fullName>sugati__RA_Total_Waiting_List__c</fullName>
    <label>Total Waiting List</label>
    <summaryFilterItems>
        <field>sugati__Booking_Item__c.sugati__BI_Room_Booking_Status__c</field>
        <operation>equals</operation>
        <value>On Waiting List</value>
    </summaryFilterItems>
    <summaryForeignKey>sugati__Booking_Item__c.sugati__BI_Rate__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>