force-app/main/default/objects/sugati__RA_Rate__c/fields/sugati__RA_Transfer_Option__c.field-meta.xml
<CustomField>
    <fullName>sugati__RA_Transfer_Option__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transfer Option</label>
    <referenceTo>sugati__Transfer_Option__c</referenceTo>
    <relationshipName>Room_Service_Rates</relationshipName>
    <type>Lookup</type>
</CustomField>