force-app/main/default/objects/sugati__RA_Rate__c/fields/sugati__S_RA_Activity_Name__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RA_Activity_Name__c</fullName>
    <formula>sugati__RA_Activity__r.Name</formula>
    <label>Activity Name</label>
    <type>Text</type>
</CustomField>