force-app/main/default/objects/sugati__RA_Rate__c/fields/sugati__S_RA_Arranged_By_Name__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RA_Arranged_By_Name__c</fullName>
    <formula>sugati__RA_Arranged_By__r.Name</formula>
    <label>Arranged By Name</label>
    <type>Text</type>
</CustomField>