force-app/main/default/objects/sugati__RA_Rate__c/fields/sugati__S_RA_Based_On_How_Many_Sharing__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RA_Based_On_How_Many_Sharing__c</fullName>
    <label>Based On How Many Sharing?</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>