force-app/main/default/objects/sugati__RA_Rate__c/fields/sugati__S_RA_Booking_Type__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RA_Booking_Type__c</fullName>
    <label>Booking Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Agent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>