force-app/main/default/objects/sugati__RA_Rate__c/fields/sugati__S_RA_Charging_Frequency__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RA_Charging_Frequency__c</fullName>
    <label>Charging Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Per Booking</fullName>
                <default>true</default>
                <label>Per Booking</label>
            </value>
            <value>
                <fullName>Per Week</fullName>
            </value>
            <value>
                <fullName>Per Day</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>