force-app/main/default/objects/sugati__RA_Rate__c/fields/sugati__S_RA_Component__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RA_Component__c</fullName>
    <label>Component</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accommodation</fullName>
            </value>
            <value>
                <fullName>Bulk Cost</fullName>
            </value>
            <value>
                <fullName>Car Hire</fullName>
            </value>
            <value>
                <fullName>Commission In</fullName>
            </value>
            <value>
                <fullName>Commission Out</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Cruise</fullName>
            </value>
            <value>
                <fullName>Days at Leisure</fullName>
            </value>
            <value>
                <fullName>Description</fullName>
            </value>
            <value>
                <fullName>Dom Flights</fullName>
            </value>
            <value>
                <fullName>Excursion</fullName>
            </value>
            <value>
                <fullName>Extra Items</fullName>
            </value>
            <value>
                <fullName>Ferry</fullName>
            </value>
            <value>
                <fullName>Int Flight</fullName>
            </value>
            <value>
                <fullName>Light Aircraft</fullName>
            </value>
            <value>
                <fullName>Linked Services</fullName>
            </value>
            <value>
                <fullName>Meet &amp; Greet</fullName>
            </value>
            <value>
                <fullName>Notes</fullName>
            </value>
            <value>
                <fullName>Own Arrangement</fullName>
            </value>
            <value>
                <fullName>Private Jet</fullName>
            </value>
            <value>
                <fullName>Private Road Transfer</fullName>
            </value>
            <value>
                <fullName>Private Speed Boat Transfer</fullName>
            </value>
            <value>
                <fullName>Private Transfer with Excursion</fullName>
            </value>
            <value>
                <fullName>Rail</fullName>
            </value>
            <value>
                <fullName>Sea Plane</fullName>
            </value>
            <value>
                <fullName>Shared Road Transfer</fullName>
            </value>
            <value>
                <fullName>Shared Speed Boat Transfer</fullName>
            </value>
            <value>
                <fullName>Shared Transfer with Excursion</fullName>
            </value>
            <value>
                <fullName>Transfer</fullName>
            </value>
            <value>
                <fullName>Tuck-Tuck</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>